# docker-logs-streamer-via-web-socket

./: .gitignore  Cargo.toml  README.md
logs/: index.html
src/: lib.rs  main.rs
src/tests/: docker_tests.rs  mod.rs
tests/: Dockerfile  docker-compose-frontend.yaml  docker-compose.yml  rand_messages.py
tests/client/ws-logstreamer/: package.json  vite.config.js
tests/client/ws-logstreamer/src/: App.vue  style.css
ui/: package.json
ui/src/: App.vue  main.js  style.css
