[package]
name = "docker-container-log-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.16.1"
clap = { version="4.5.4", features = ["derive"] }
futures-core = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features =["sink"] }
pretty_env_logger = "0.5.0"
serde = "1.0.202"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
