[package]
name = "docker-container-log-streamer"
description = "A Rust library for streaming docker logs via websocket."
repository = "https://github.com/j-p-d-e-v/docker-logs-streamer-via-web-socket"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["JP Mateo <jpmateo022@gmail.com>"]
categories = ["asynchronous","network-programming","web-programming","web-programming::websocket","web-programming::http-server"]
keywords = ["websocket", "personal-project","study-rust","docker","container","logs-streamer"]

[dependencies]
bollard = "0.16.1"
clap = { version="4.5.4", features = ["derive"] }
futures-core = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features =["sink"] }
pretty_env_logger = "0.5.0"
serde = "1.0.202"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
